# libTIMS-SDR

./: CMakeLists.txt  README.md
include/: timssdr.h
src/: timssdr.c
tests/: timssdr-info.c
